<resources>
  <string name="首页">Wan</string>
  <string name="动态">ReadHub</string>
  <string name="我的">Mine</string>
  <string name="网络异常点击屏幕重试">网络异常，点击屏幕重试</string>
  <string name="加载失败点击屏幕重试">加载失败，点击屏幕重试</string>
  <string name="该模块暂时还没有数据哦">该模块暂时还没有数据哦</string>
  <string name="似乎已断开网络连接">似乎已断开网络连接</string>
  <string name="数据加载中">数据加载中…</string>
  <string name="没有更多数据了">没有更多数据了</string>
  <string name="下拉刷新">下拉刷新</string>
  <string name="释放刷新">释放刷新</string>
  <string name="再按一次退出">再按一次退出</string>
  <string name="请输入用户名">请输入用户名</string>
  <string name="用户名太短">用户名太短</string>
  <string name="请输入密码">请输入密码</string>
  <string name="再次请输入密码">再次请输入密码</string>
  <string name="登录">登 录</string>
  <string name="注册">注 册</string>
  <string name="立即体验">立即体验</string>
  <string name="密码太短">密码太短</string>
  <string name="两次输入的密码不一致">两次输入的密码不一致</string>
  <string name="登录失败">登录失败</string>
  <string name="数据转换异常">数据转换异常</string>
  <string name="数据请求出错">数据请求出错</string>
  <string name="请求参数错误">请求参数错误</string>
  <string name="服务器异常">服务器异常</string>
  <string name="服务器无数据">服务器无数据</string>
  <string name="未知错误">未知错误</string>
  <string name="登录过期请重新登录">登录过期，请重新登录</string>
  <string name="发送">发送</string>
  <string name="聊天模拟">聊天模拟</string>
  <string name="我的积分">我的积分:%1$S</string>
  <string name="手机时间错误">手机时间错误</string>
  <string name="加载中">加载中…</string>
  <string name="视频压缩失败">视频压缩失败</string>
  <string name="视频封面获取失败">视频封面获取失败</string>
  <string name="请选择一个视频">请选择一个视频</string>
  <string name="开始压缩">开始压缩</string>
  <string name="视频压缩与封面获取">视频压缩与封面获取</string>
  <string name="APP更新">APP更新</string>
  <string name="播放网络视频">播放网络视频</string>
  <string name="Sticky吸顶效果">Sticky吸顶效果</string>
  <string name="学生成绩单效果">学生成绩单效果</string>
  <string name="九宫格拖拽效果">九宫格拖拽效果</string>
  <string name="AT展示效果">\@或#展示效果</string>
  <string name="字数超出限制">字数超出限制</string>
  <string name="你已经AT过Ta啦">你已经@过Ta啦！</string>
  <string name="在这里输入内容">在这里输入内容</string>
  <string name="Coordinator嵌套下拉刷新">Coordinator嵌套下拉刷新</string>
  <string name="列表收缩展开效果">列表收缩展开效果</string>
  <string name="列表中视频播放">列表中视频播放</string>
  <string name="VerticalViewPager仿抖音">VerticalViewPager仿抖音</string>
  <string name="RecyclerView仿抖音">RecyclerView仿抖音</string>
  <string name="列表分割线效果">列表分割线效果</string>
  <string name="FlexboxLayout">FlexboxLayout</string>
  <string name="跑马灯">跑马灯</string>
  <string name="高斯模糊">高斯模糊</string>
  <string name="Zxing扫码">Zxing扫码</string>
  <string name="手势解锁">手势解锁</string>
  <string name="统计信息展示">统计信息展示</string>
  <string name="BottomSheetDialog">BottomSheetDialog</string>
  <string name="测试专用页面">测试专用页面</string>
  <string name="浏览数">浏览数:</string>
  <string name="点赞数">点赞数:</string>
  <string name="收藏数">收藏数:</string>
  <string name="清理缓存">清理缓存</string>
  <string name="退出">退出</string>
  <string name="悬浮窗播放">悬浮窗播放</string>
  <string name="版本信息">版本信息</string>
  <string name="取消">取消</string>
  <string name="确定">确定</string>
  <string name="温馨提示">温馨提示</string>
  <string name="APP调试需要通知权限是否去打开">APP调试需要通知权限，是否去打开？</string>
  <string name="去打开">去打开</string>
  <string name="二维码内容不能为空">二维码内容不能为空</string>
  <string name="扫码需要摄像头权限">扫码需要摄像头权限</string>
  <string name="打开BottomSheetDialog">打开BottomSheetDialog</string>
  <string name="Coil特殊图片加载">Coil特殊图片加载</string>
  <string name="需要给予权限才能使用该功能">需要给予权限才能使用该功能</string>
  <string name="圈子">圈子</string>
  <string name="关注">关注</string>
  <string name="粉丝">粉丝</string>
  <string name="至少需要选中4个点">至少需要选中4个点</string>
  <string name="手势设置成功">手势设置成功</string>
  <string name="两次选中的点不同请重新设置">两次选中的点不同，请重新设置</string>
  <string name="验证失败请重试">验证失败，请重试</string>
  <string name="失败次数太多暂停使用">失败次数太多，暂停使用</string>
  <string name="点击悬浮球">点击悬浮球</string>
  <string name="年月日">%1$S年%2$S月%3$S日</string>
  <string name="暂不支持该类型选择">暂不支持该类型选择</string>
  <string name="指纹验证失败">指纹验证失败</string>
  <string name="未知">未知</string>
  <string name="未关注">未关注</string>
  <string name="已关注">已关注</string>
  <string name="指纹登录">指纹登录</string>
  <string name="是否使用指纹登录">是否使用指纹登录(切换账号请点取消)?</string>
  <string name="开启">开启</string>
  <string name="忽略">忽略</string>
  <string name="检测到您的手机支持指纹识别是否开启指纹登录">检测到您的手机支持指纹识别，是否开启指纹登录?</string>
  <string name="设置">设置</string>
  <string name="缓存清理中">缓存清理中…</string>
  <string name="协程">协程</string>
  <string name="下载失败点击重试">下载失败，点击重试</string>
  <string name="正在下载">正在下载</string>
  <string name="新版本">新版本</string>
  <string name="下载完成点击安装">下载完成,点击安装</string>
  <string name="解析失败">解析失败</string>
  <string name="扫码失败">扫码失败</string>
  <string name="接口error">接口error</string>
  <string name="数据返回错误">数据返回错误</string>
  <string name="下载地址不存在">下载地址不存在</string>
  <string name="相册不能访问">相册不能访问</string>
  <string name="下载出错请重试">下载出错，请重试</string>
  <string name="开始下载">开始下载</string>
  <string name="取消下载">取消下载</string>
  <string name="下载成功">下载成功</string>
  <string name="下载成功插入相册失败">下载成功，插入相册失败</string>
  <string name="下载成功未找到缓存文件">下载成功，未找到缓存文件</string>
  <string name="本地文件插入相册成功">本地文件插入相册成功</string>
  <string name="本地文件插入相册失败">本地文件插入相册失败</string>
  <string name="本地文件未找到">本地文件未找到</string>
  <string name="验证指纹">验证指纹</string>
  <string name="请按压指纹感应区验证指纹">请按压指纹感应区验证指纹</string>
  <string name="用户取消">用户取消</string>
  <string name="当前设备不支持指纹识别">当前设备不支持指纹识别</string>
  <string name="请添加至少一个有效指纹">请添加至少一个有效指纹</string>
  <string name="请先设置锁屏">请先设置锁屏</string>
  <string name="播放速度">播放速度</string>
  <string name="刷新中">刷新中…</string>
  <string name="选AT或井效果">选择@或#效果</string>
  <string name="展示显示效果">展示显示效果</string>
  <string name="科目">科目</string>
  <string name="姓名">姓名</string>
  <string name="请输入要生二维码的文字">请输入要生二维码的文字</string>
  <string name="生成二维码">生成二维码</string>
  <string name="解析二维码">解析二维码</string>
  <string name="扫描二维码">扫描二维码</string>
  <string name="语文">语文</string>
  <string name="数学">数学</string>
  <string name="英语">英语</string>
  <string name="物理">物理</string>
  <string name="化学">化学</string>
  <string name="生物">生物</string>
  <string name="政治">政治</string>
  <string name="历史">历史</string>
  <string name="地理">地理</string>
  <string name="总分">总分</string>
  <string name="圈子数">圈子数</string>
  <string name="关注数">关注数</string>
  <string name="粉丝数">粉丝数</string>
  <string name="收起">收起</string>
  <string name="滑动验证码">滑动验证码</string>
  <string name="Html代码加载">Html代码加载</string>
  <string name="日历选择">日历选择</string>
  <string name="请选择日期">请选择日期</string>
  <string name="今日">今日</string>
  <string name="昨日">昨日</string>
  <string name="本周">本周</string>
  <string name="本月">本月</string>
  <string name="区间日期选择">区间日期选择</string>
  <string name="开始日期">开始日期</string>
  <string name="结束日期">结束日期</string>
  <string name="确认">确认</string>
  <string name="请选择开始日期">请选择开始日期</string>
  <string name="请选择结束日期">请选择结束日期</string>
  <string name="JS交互调用">JS交互调用</string>
  <string name="APP调用HTML">APP调用HTML</string>
</resources>
