<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/语文"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/数学"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/英语"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/物理"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/化学"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/生物"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/政治"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/历史"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/地理"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

    <View
        android:layout_width="1px"
        android:layout_height="40dp"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@color/gray_CCCCCC"
        android:gravity="center"
        android:text="@string/总分"
        android:textColor="@color/black"
        android:textSize="16sp"
        />

  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/gray"
      />
</LinearLayout>