<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/registerRoot"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:focusable="true"
  android:focusableInTouchMode="true"
  android:orientation="vertical">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/registerInputAccount"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    app:layout_constraintBottom_toTopOf="@id/registerInputPassword1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.3"
    app:layout_constraintVertical_chainStyle="packed">
    <!--textPersonName会在部分手机上无法输入中文，谨慎使用-->
    <EditText
      android:id="@+id/registerEditAccount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/请输入用户名"
      android:imeOptions="flagForceAscii"
      android:inputType="text"
      android:maxLines="1" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/registerInputPassword1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    app:layout_constraintBottom_toTopOf="@id/registerInputPassword2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/registerInputAccount"
    app:layout_constraintVertical_chainStyle="packed">

    <EditText
      android:id="@+id/registerEditPassword1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/请输入密码"
      android:inputType="textPassword"
      android:maxLines="1" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/registerInputPassword2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/registerInputPassword1"
    app:layout_constraintVertical_chainStyle="packed">

    <EditText
      android:id="@+id/registerEditPassword2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/再次请输入密码"
      android:inputType="textPassword"
      android:maxLines="1" />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/registerSubmit"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:background="@drawable/shape_half_dark_green"
    android:gravity="center"
    android:padding="12dp"
    android:text="@string/注册"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintWidth_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>